CMAKE_MINIMUM_REQUIRED(VERSION 3.15.0)

PROJECT(CompileWithIBAMR LANGUAGES C CXX)

FIND_PACKAGE(IBAMR REQUIRED)

FIND_PACKAGE(KernelPack REQUIRED)

ADD_EXECUTABLE(main main.cpp)

TARGET_SOURCES(main PRIVATE VelFcn.cpp)

TARGET_LINK_LIBRARIES(main IBAMR::IBAMR2d)
TARGET_LINK_LIBRARIES(main KernelPack::KERNEL_PACK_HEADERS)
